// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Prisma Schema Generator > Keystone-compat mode (db.keystoneCompat) > emits @default("") for non-null text without an explicit default (snapshot) 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "postgresql"
}

model Account {
  id        String   @id @default(cuid())
  name         String @default("")
  status       String @default("PLEASE_UPDATE")
  nickname     String?
  note         String?
  loginCount   Int
  isActive     Boolean @default(true)
}
"
`;

exports[`Prisma Schema Generator > field defaultValue → @default(...) > generates a representative multi-field model with mixed defaults 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model Config {
  id        String   @id @default(cuid())
  label        String? @default("PLEASE_UPDATE")
  retries      Int? @default(3)
  limits       Json? @default("[1,2,3,4,5]")
  empty        Json? @default("[]")
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate basic schema with datasource and generator 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate many-to-one relationship 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  from_Post_author Post[]  @relation("Post_author")
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  authorId     String? @map("author")
  author       User?  @relation("Post_author", fields: [authorId], references: [id])
  @@index([authorId])
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with basic fields 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String
  email        String
  age          Int?
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with checkbox field 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  isPublished  Boolean @default(false)
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate model with timestamp field 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model Post {
  id        String   @id @default(cuid())
  title        String?
  publishedAt  DateTime?
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate multiple models 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "postgresql"
}

model User {
  id        String   @id @default(cuid())
  name         String?
}

model Post {
  id        String   @id @default(cuid())
  title        String?
}

model Comment {
  id        String   @id @default(cuid())
  content      String?
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should generate one-to-many relationship 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model User {
  id        String   @id @default(cuid())
  name         String?
  posts        Post[]
}

model Post {
  id        String   @id @default(cuid())
  title        String?
}
"
`;

exports[`Prisma Schema Generator > generatePrismaSchema > should use custom opensaasPath for generator output 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.custom-path/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}
"
`;

exports[`Prisma Schema Generator > select field with enum type > should generate singleton model with bare Int @id (no @default) 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

model Settings {
  id        Int      @id
  siteName     String
  maintenanceMode Boolean @default(false)
}
"
`;

exports[`Prisma Schema Generator > select field with enum type > should match snapshot for enum select field 1`] = `
"generator client {
  provider            = "prisma-client"
  output              = "../.opensaas/prisma-client"
  importFileExtension = "ts"
  moduleFormat        = "esm"
}

datasource db {
  provider = "sqlite"
}

enum PostStatus {
  draft
  published
  archived
}

model Post {
  id        String   @id @default(cuid())
  title        String
  status       PostStatus @default(draft)
}
"
`;
